# RLFighter

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: design.md
rlfighter/agents/: base.py  human.py  rl.py  scripted.py
rlfighter/core/: action.py  agent.py  combat.py  constants.py  hitbox.py  observation.py  world.py
rlfighter/render/: pygame_view.py
rlfighter/rl/: policy.py  ppo.py  rollout.py  train.py
scripts/: eval.py  play.py  train.py
tests/: test_action_state.py  test_combat.py  test_observation.py
