[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlfighter"
version = "0.1.0"
description = "Simple combat-logic RL playground: 1vN/NvN agents trained with custom PPO"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pygame",
    "torch",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rlfighter*"]
